--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,3 +12,5 @@ Description: A bunch of datasets formatted to be straightforward to use for
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
+URL: https://github.com/jolars/rdatasets
+BugReports: https://github.com/jolars/rdatasets/issues
