--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,3 +18,6 @@ RoxygenNote: 7.1.0
 Roxygen: list(markdown = TRUE)
 Depends: R (>= 3.30)
 Imports: Matrix
+Suggests: 
+    spelling
+Language: en-US
