--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: rdatasets
-Title: Neatly Formattered Datasets
+Title: Datasets for R
 Version: 0.0.0.9000
 Authors@R: 
     person(given = "Johan",
@@ -16,7 +16,7 @@ URL: https://github.com/jolars/rdatasets
 BugReports: https://github.com/jolars/rdatasets/issues
 RoxygenNote: 7.1.0
 Roxygen: list(markdown = TRUE)
-Depends: R (>= 3.30)
+Depends: R (>= 3.3.0)
 Imports: Matrix
 Suggests: 
     spelling
